[tool.poetry]
name = "oli-meta"
version = "0.1.0"
description = ""
authors = ["Thomas Sungjin Kang <ujuc@ujuc.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
beautifulsoup4 = "^4.8.2"
httpx = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"

[tool.black]
line-lenght = 80
target-version = ['py37', 'py38']
skip-string-normalization = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
